--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -23,7 +23,7 @@ NC. 5587                    pr in Cam 11 Dec 1841
                     Untertänigster Bericht
                     des Oberförsters zu Baum,
 
-                         Ein von Kruckeberg
+                         Ein von Krückeberg
 [R]                      Nro 10 in Berenbusch
 [rK/Ref.]                anzukaufendes
                          Grundstück betreffend
@@ -41,7 +41,7 @@ schein genommen und füge ich von
 der Lage dieses Grundstücks hier
 eine Situations-Zeichnung bei.
 Das Grundstück hält nach Anga-
-be des Kruckeberg 9 Morgen 19 Rothen
+be des Krückeberg 9 Morgen 19 Rothen
 wovon 8 Morgen 90 Ruthen im Jahr
 1814 von der herrschaftlichen Söhre-
 Weide und 49 Rothen im Jahr 1818
@@ -61,7 +61,7 @@ belegenen Grundstücke und weil
 von hieraus kein weiteres Gefälle
 ist, muß das Waßer, nachdem
 die Nebenaue wieder in ihre
-Ufer zurück getreten ist, derselben
+Ufer zurück getreten ist, denselben
 Weg von den Söhr-Grundstücken
 wieder nach Evesen zurück nehmen.
 Nach der Aussage mehrerer
@@ -89,7 +89,7 @@ Landwirthe, ist der Werth von diesem
 Grundstücke der Morgen nicht höher
 als zu 50 Rthl zu veranschlagen und
 hat Krückeberg daher solches im Jahr
-1814 zu einen viel zu hohen Preise
+1814 zu einem viel zu hohen Preise
 angekauft.
 Dieses Grundstück, auch selbst für
 den vorbenannten Preis von 50 Rthl p Morgen
@@ -115,7 +115,7 @@ des zu nassen Bodens und endlich
 3), solches mit Holz anzubauen ist
 eben so wenig vortheilhaft und
 zwar weil die Entwässerung sehr
-kostspielig werden würde und aufge-
+kostspielig werden würde und außer-
 dem greift dieses Grundstück auch
 in die neben liegenden Grund-
 stücke hinein.
