--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -39,7 +39,7 @@ NC. 5587                    pr in Cam 11 Dec 1841
 Dem vor Fürstlicher Rentkammer
 erhaltenen Aufträge zufolge, habe
 ich das Grundstück, von welchen in dem
-vom Colon Krückeberg unterm 21ten v. M.
+vom Colon Krückeberg unterem 21ten v. M.
 sub N. C. 5263 bei Fürstlicher Rentkammer
 eingereichten Gesuch Erwähnung ge-
 schieht, an Ort und Stelle in Augen
@@ -142,7 +142,67 @@ Baum d 10te Decbr 1841.
 ....
 
 |
-
+[verse]
 ....
+Based on the instructions from the Princely Rentcammer, I have
+inspected the plot of land mentioned in the application submitted
+by Colon Krückeberg on the 21st of last month, sub N. C. 5263,
+and I have attached a site plan showing its location.
+
+According to Krückeberg's statement, the plot measures 9 Morgen
+and 19 Rothen. Of this, 8 Morgen and 90 Rothen were purchased in
+1814 from the manorial Söhr-Weide, and 49 Rothen were purchased
+in 1818 from forest land. So far, 8 1/2 Morgen of this has been
+used as arable land and the rest as meadow.
+
+The plot has heavy clay soil, which could be considered of
+average quality if it were not often exposed to floods. As soon
+as the Aue overflows, water from the Neubenau near Evesen backs
+up onto the plots on the Söhre. Since there is no further
+gradient from this point, the water must return the same way from
+the Söhr plots back to Evesen once the Neubenau has receded
+within its banks.
+
+According to the statements of several residents in Berenbusch
+and Nordholz, Krückeberg has harvested very strong grain from
+this plot in dry years, but has often not even recovered the seed
+in wet years.
+
+I believe the plots on the Söhre could be generally improved by
+digging a canal, perhaps 6 to 8 feet deep, from these plots to
+the Flakenbrücke, which would drain the water during floods and
+lead it into the canal at the Flokenbrücke. At least there seems
+to be a gradient in that direction.
+
+In my assessment, as well as the opinion of expert farmers, the
+value of this plot should not be estimated higher than 50 Rthl
+per Morgen. Krückeberg therefore bought it in 1814 at a price
+that was far too high.
+
+Purchasing this plot for the manorial account, even for the
+aforementioned price of 50 Rthl per Morgen, would not be in the
+manorial interest, as it cannot be used advantageously in any
+respect.
+
+To use it as arable land, the plot is too far from the manorial
+farms, and due to the wet nature of the soil, it is unlikely that
+a lease price of more than 2 Rthl per Morgen would be offered.
+
+To use it as a meadow, no higher yield would be achieved either.
+The Söhr-Weide adjoining this plot also only produces very poor
+hay as a result of the overly wet soil.
+
+Planting it with wood is equally disadvantageous, because
+drainage would be very expensive. Furthermore, this plot also
+encroaches on the neighboring plots.
+
+Krückeberg's debt situation also does not allow him to sell the
+mentioned plot for such a cheap price. At best, selling it would
+only help him for a short time. Paying more than 50 Rthl per
+Morgen can only be justified by the intention of freeing the
+applicant from his precarious situation.
+
+Baum, December 10, 1841
+[Creuzinger]
 ....
 |===
