--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -144,6 +144,18 @@ Baum d 10te Decbr 1841.
 |
 [verse]
 ....
+NC. 5587
+presented in Cam[mer] 11 Dec 1841
+
+To the Princely Chamber of Revenues, Most Humble Report of the
+Head Forester at Baum,
+
+Concerning a piece of property to be purchased from von
+Krückeberg No. 10 in Berenbusch
+                         
+[R]                      
+[rK/Ref.]                
+                         
 Based on the instructions from the Princely Rentcammer, I have
 inspected the plot of land mentioned in the application submitted
 by Colon Krückeberg on the 21st of last month, sub N. C. 5263,
