--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -46,16 +46,16 @@ schein genommen und füge ich von
 der Lage dieses Grundstücks hier
 eine Situations-Zeichnung bei.
 Das Grundstück hält nach Anga-
-be des Krückeberg 9 Morgen 19 Rothen
+be des Krückeberg 9 Morgen 19 Ruthen
 wovon 8 Morgen 90 Ruthen im Jahr
 1814 von der herrschaftlichen Söhr-
-Weide und 49 Rothen im Jahr 1818
+Weide und 49 Ruthen im Jahr 1818
 vom Forstgründe angekauft sind,
 und sind bisher hiervon 8 1/2 Morgen
 als Saatland und das übrige
 als Wiese benutzt worden.
 Das Grundstück hat einen
-schweren tonigten Boden, der als
+schweren thonigten Boden, der als
 mittelmässig von Güte anzunehmen
 wäre, wenn solcher nicht oft Über-
 schwemmungen ausgesetzt seÿ und
@@ -84,9 +84,9 @@ werden könnten und zwar dadurch
 daß von diesen Grundstücken ein
 vielleicht 6 bis 8 Fuß tiefer Canal
 nach der Flakenbrücke gezogen
-wurde, der bei Überschwemmungen
+würde, der bei Überschwemmungen
 das Wasser ab und in den Canal
-bei der Flokenbrücke führte
+bei der Flakenbrücke führte
 wenigstens scheint dahin Gefälle zu sein.
 Nach meiner Beurtheilung und
 auch nach dem Urtheile Sachverständiger
@@ -155,65 +155,56 @@ Krückeberg No. 10 in Berenbusch
 [R]                      
 [rK/Ref.]                
                          
-Based on the instructions from the Princely Rentcammer, I have
-inspected the plot of land mentioned in the application submitted
-by Colon Krückeberg on the 21st of last month, sub N. C. 5263,
-and I have attached a site plan showing its location.
+Acting on orders from the Princely Rent Chamber, I inspected on
+site the parcel mentioned in Colon Krückeberg’s petition of the
+21st of last month (sub N. C. 5263) to that chamber, and I attach
+a sketch of its location.
 
-According to Krückeberg's statement, the plot measures 9 Morgen
-and 19 Rothen. Of this, 8 Morgen and 90 Rothen were purchased in
-1814 from the manorial Söhr-Weide, and 49 Rothen were purchased
-in 1818 from forest land. So far, 8 1/2 Morgen of this has been
-used as arable land and the rest as meadow.
+According to Krückeberg, the parcel measures 9 Morgen 19 Ruthen;
+of this, 8 Morgen 90 Ruthen were bought in 1814 from the manorial
+Söhre pasture and 49 Ruthen in 1818 from forest land. To date, 8½
+Morgen have been used as arable, the rest as meadow.
 
-The plot has heavy clay soil, which could be considered of
-average quality if it were not often exposed to floods. As soon
-as the Aue overflows, water from the Neubenau near Evesen backs
-up onto the plots on the Söhre. Since there is no further
-gradient from this point, the water must return the same way from
-the Söhr plots back to Evesen once the Neubenau has receded
-within its banks.
+The soil is heavy clay. On its own it would count as medium
+quality, but it is often flooded. When the Aue overflows, water
+from the Neubenau at Evesen backs up onto the plots on the Söhre;
+and because from there the water has nowhere to run, once the
+Nebenaue returns to its banks the water has to drain back the
+same way toward Evesen.
 
-According to the statements of several residents in Berenbusch
-and Nordholz, Krückeberg has harvested very strong grain from
-this plot in dry years, but has often not even recovered the seed
-in wet years.
+Several residents of Berenbusch and Nordholz report that
+Krückeberg harvested very good grain here in dry years, but in
+wet years often did not even recover the seed.
 
-I believe the plots on the Söhre could be generally improved by
-digging a canal, perhaps 6 to 8 feet deep, from these plots to
-the Flakenbrücke, which would drain the water during floods and
-lead it into the canal at the Flokenbrücke. At least there seems
-to be a gradient in that direction.
+I believe the Söhre plots could generally be much improved by
+cutting a canal, perhaps 6–8 feet deep, toward the Flakenbrücke;
+in floods it would carry the water away and into the canal at the
+Flokenbrücke. There appears to be a gradient in that direction.
 
-In my assessment, as well as the opinion of expert farmers, the
-value of this plot should not be estimated higher than 50 Rthl
-per Morgen. Krückeberg therefore bought it in 1814 at a price
-that was far too high.
+In my judgment, and that of expert farmers, this parcel is worth
+no more than 50 Rthl per Morgen; Krückeberg therefore paid far
+too much for it in 1814.
 
-Purchasing this plot for the manorial account, even for the
-aforementioned price of 50 Rthl per Morgen, would not be in the
-manorial interest, as it cannot be used advantageously in any
-respect.
+Buying this parcel—even at 50 Rthl per Morgen—on the lordship’s
+account and then using it would not, in my view, be in the
+lordship’s interest, because it cannot be used profitably:
 
-To use it as arable land, the plot is too far from the manorial
-farms, and due to the wet nature of the soil, it is unlikely that
-a lease price of more than 2 Rthl per Morgen would be offered.
+1. As arable, it lies too far from the manorial demesnes
+(lordship-run home farms); if leased out, given the wet soil,
+scarcely more than 2 Rthl rent per Morgen would be offered.
 
-To use it as a meadow, no higher yield would be achieved either.
-The Söhr-Weide adjoining this plot also only produces very poor
-hay as a result of the overly wet soil.
+2. As meadow, it would not yield more either; the adjoining Söhre
+pasture produces very poor hay because the soil is too wet.
 
-Planting it with wood is equally disadvantageous, because
-drainage would be very expensive. Furthermore, this plot also
-encroaches on the neighboring plots.
+3. Planting it with timber would be no better: drainage would be
+very costly, and the parcel also encroaches on neighboring plots.
 
-Krückeberg's debt situation also does not allow him to sell the
-mentioned plot for such a cheap price. At best, selling it would
-only help him for a short time. Paying more than 50 Rthl per
-Morgen can only be justified by the intention of freeing the
-applicant from his precarious situation.
+Krückberg’s debts also argue against letting him sell the parcel
+at so low a price; at best the sale would help only briefly.
+Paying more than 50 Rthl per Morgen could only be justified by
+the wish to relieve the petitioner from his difficult situation.
 
-Baum, December 10, 1841
+
 [Creuzinger]
 ____
 |===
