--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -155,52 +155,47 @@ Krückeberg No. 10 in Berenbusch
 [R]                      
 [rK/Ref.]                
                          
-Acting on orders from the Princely Rent Chamber, I inspected on site the
-parcel mentioned in Colon Krückeberg’s petition of the 21st of last month
-(sub N. C. 5263) to that chamber, and I attach a sketch of its location.
+Acting on orders from the Princely Rent Chamber, I inspected on site the parcel
+mentioned in Colon Krückeberg’s petition of the 21st of last month (sub N. C. 5263)
+to that chamber, and I attach a sketch of its location.
 
-According to Krückeberg, the parcel measures 9 Morgen 19 Ruthen; of this, 8
-Morgen 90 Ruthen were bought in 1814 from the manorial Söhre pasture and 49
-Ruthen in 1818 from forest land. To date, 8½ Morgen have been used as
-arable, the rest as meadow.
+According to Krückeberg, the parcel measures 9 Morgen 19 Ruthen; of this, 8 Morgen 90
+Ruthen were bought in 1814 from the manorial Söhre pasture and 49 Ruthen in 1818 from
+forest land. To date, 8½ Morgen have been used as arable, the rest as meadow.
 
-The soil is heavy clay. On its own it would count as medium quality, but it
-is often flooded. When the Aue overflows, water from the Neubenau at Evesen
-backs up onto the plots on the Söhre; and because from there the water has
-nowhere to run, once the Nebenaue returns to its banks the water has to
-drain back the same way toward Evesen.
+The soil is heavy clay. On its own it would count as medium quality, but it is often
+flooded. When the Aue overflows, water from the Neubenau at Evesen backs up onto the
+plots on the Söhre; and because from there the water has nowhere to run, once the
+Nebenaue returns to its banks the water has to drain back the same way toward Evesen.
 
-Several residents of Berenbusch and Nordholz report that Krückeberg
-harvested very good grain here in dry years, but in wet years often did not
-even recover the seed.
+Several residents of Berenbusch and Nordholz report that Krückeberg harvested very
+good grain here in dry years, but in wet years often did not even recover the seed.
 
-I believe the Söhre plots could generally be much improved by cutting a
-canal, perhaps 6–8 feet deep, toward the Flakenbrücke; in floods it would
-carry the water away and into the canal at the Flokenbrücke. There appears
-to be a gradient in that direction.
+I believe the Söhre plots could generally be much improved by cutting a canal,
+perhaps 6–8 feet deep, toward the Flakenbrücke; in floods it would carry the water
+away and into the canal at the Flokenbrücke. There appears to be a gradient in that
+direction.
 
-In my judgment, and that of expert farmers, this parcel is worth no more
-than 50 Rthl per Morgen; Krückeberg therefore paid far too much for it in
-1814.
+In my judgment, and that of expert farmers, this parcel is worth no more than 50 Rthl
+per Morgen; Krückeberg therefore paid far too much for it in 1814.
 
-Buying this parcel—even at 50 Rthl per Morgen—on the lordship’s account and
-then using it would not, in my view, be in the lordship’s interest, because
-it cannot be used profitably:
+Buying this parcel—even at 50 Rthl per Morgen—on the lordship’s account and then
+using it would not, in my view, be in the lordship’s interest, because it cannot be
+used profitably:
 
-1. As arable, it lies too far from the manorial demesnes (lordship-run home
-   farms); if leased out, given the wet soil, scarcely more than 2 Rthl rent
-   per Morgen would be offered.
+1. As arable, it lies too far from the manorial demesnes (lordship-run home farms);
+   if leased out, given the wet soil, scarcely more than 2 Rthl rent per Morgen would be
+   offered.
 
-2. As meadow, it would not yield more either; the adjoining Söhre pasture
-   produces very poor hay because the soil is too wet.
+2. As meadow, it would not yield more either; the adjoining Söhre pasture produces
+   very poor hay because the soil is too wet.
 
-3. Planting it with timber would be no better: drainage would be very
-   costly, and the parcel also encroaches on neighboring plots.
+3. Planting it with timber would be no better: drainage would be very costly, and the
+   parcel also encroaches on neighboring plots.
 
-Krückberg’s debts also argue against letting him sell the parcel at so low
-a price; at best the sale would help only briefly.  Paying more than 50
-Rthl per Morgen could only be justified by the wish to relieve the
-petitioner from his difficult situation.
+Krückberg’s debts also argue against letting him sell the parcel at so low a price;
+at best the sale would help only briefly.  Paying more than 50 Rthl per Morgen could
+only be justified by the wish to relieve the petitioner from his difficult situation.
 
 
 [Creuzinger]
