--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -1,4 +1,4 @@
-= Documendt 5
+= Documendt 5: Evaluation of the Krückeberg Parcel (Berenbusch): Flooding, Use, and Value for Potential Sale in Debt Proceedings (10 Dec 1841)
 :page-role: wide
 
 [cols="1a,1a",options="noheader",frame=none,grid=none]
@@ -136,7 +136,7 @@ dafür zu entrichten, kann nur
 in der Absicht sich begründen,
 den Supplicanten aus seiner
 misslichen Lage zu befreien.
-Baum d 10te Decbr 1841.
+Baum d 10ten Decbr 1841.
 [Creuzinger]
 ....
 
