--- a/modules/689/pages/doc-01.adoc
+++ b/modules/689/pages/doc-01.adoc
@@ -37,7 +37,7 @@ NC. 438i
                 Gnädigst regierender Fürst
                 und Herr!             
 
-Rl.
+Bl.
 b.m. zum Amtsbericht
 B. 4 Oct 41
   
@@ -100,6 +100,9 @@ and Lord!
 
 [Referred to] the office report
 B[ückeburg], 4 Oct 1841
+
+[Translation of text ofnotation that begins 'Bl.']
+(On this leaf:) keep with me for the Amtsbericht. Bückeburg, 4 Oct 1841.
 
 Samg
 
