--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -35,7 +35,7 @@ FÜRSTL: SCHAUMBG: LIPPE: STEMPEL-TAXE
 [rok]             und Herr!
 
 
-[RC?]. Seite 3.
+Bl[att]. Seite 3.
 
 
 Zur völligen Bezahlung der Schuld an die Hempel Söhne
