--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -1,7 +1,8 @@
 = Document 3: Petition of Colon Krückeberg, with Valuation and Resolution
 :page-role: wide
 
-== Petition (11 November 1841)
+[[idx-3-1]]
+== Petition of Colon (11 November 1841)
 
 === Summary
 
