--- a/modules/689/pages/doc-index.adoc
+++ b/modules/689/pages/doc-index.adoc
@@ -45,11 +45,7 @@ ad 200 r.
 [[idx-3-1]]
 |3.
 |xref:doc-03.adoc#indx-3-1[Vorst. des Colons Krückeberg]
-.4+|gegen Ver- +
-pfändung +
-seiner sämmt- +
-lichen Län- +
-dereien
+.4+|gegen Verpfändung seiner sämmtlichen Ländereien
 |Bbg.
 |1841
 |Nov.
