--- a/modules/689/pages/x.adoc
+++ b/modules/689/pages/x.adoc
@@ -1,105 +1,31 @@
 ....
-Den vor Fürstlicher Rentkammer
-erhaltenen Aufträgen zufolge habe
-ich das Grundstück, wovon in dem
-vom Colon Krückeberg unterm 21ten v. M.
-sub N. C. 5263 bei Fürstlicher Rentkammer
-eingereichten Gesuch Erwähnung ge-
-schieht, an Ort und Stelle in Augen-
-schein genommen und füge ich von
-der Lage dieses Grundstücks hier
-eine Situations-Zeichnung bei.
-Das Grundstück hält nach Anga-
-be des Krückeberg 9 Morgen 19 Ruthen,
-wovon 8 Morgen 90 Ruthen im Jahr
-1814 von der herrschaftlichen Söhre-
-Weide und 49 Ruthen im Jahr 1818
-vom Forstgründe angekauft sind,
-und sind bisher hiervon 8 1/2 Morgen
-als Saatland und das übrige
-als Wiese benutzt worden.
-Das Grundstück hat einen
-schweren thonigen Boden, der als
-mittelmässig von Güte anzunehmen
-wäre, wenn solcher nicht oft Über-
-schwemmungen ausgesetzt seÿ und
-zwar, sobald die Aue austritt, staut
-das Wasser von der Nebenaue bei
-Evesen herauf auf die auf der Söhre
-belegenen Grundstücke, und weil
-von hieraus kein weiteres Gefälle
-ist, muß das Waßer, nachdem
-die Nebenaue wieder in ihre
-Ufer zurück getreten ist, denselben
-Weg von den Söhre-Grundstücken
-wieder nach Evesen zurück nehmen.
-Nach der Aussage mehrerer
-Einwohner in Berenbusch und Nord-
-holz hat Krückeberg auf diesem
-Grundstücke bei trockenen Jahren
-sehr starkes Korn geerntet, dage-
-gen bei nassen Jahren, oftmalen
-auch nicht die Einsaat wieder
-bekommen.
-Ich glaube zwar, daß die auf
-der Söhre belegenen Grundstücke
-im allgemeinen sehr verbessert
-werden könnten und zwar dadurch,
-daß von diesen Grundstücken ein
-vielleicht 6 bis 8 Fuß tiefer Canal
-nach der Flakenbrücke gezogen
-würde, der bei Überschwemmungen
-das Wasser ab und in den Canal
-bei der Flakenbrücke führen würde,
-wenigstens scheint dahin Gefälle zu sein.
-Nach meiner Beurtheilung und
-auch nach dem Urtheile Sachverständiger
-Landwirthe, ist der Werth von diesem
-Grundstücke der Morgen nicht höher
-als zu 50 Rthl zu veranschlagen und
-hat Krückeberg daher solches im Jahr
-1814 zu einem viel zu hohen Preise
-angekauft.
-Dieses Grundstück, auch selbst für
-den vorbenannten Preis von 50 Rthl p Morgen
-für herrschaftliche Rechnung anzukaufen,
-und für die Folge zu benutzen, möchte
-nach meinem Dafürhalten nicht im
-herrschaftlichen Interesse liegen,
-weil solches in keiner Hinsicht vor-
-theilhaft benutzt werden kann und zwar
-1), solches als Saatlanderey zu benutzen,
-ist das Grundstück den herrschaftlichen
-Meÿereÿen zu weit entfernt und
-bei einer Verpachtung wird, wegen
-der nassen Beschaffenheit des Bodens,
-schwerlich mehr denn 2 Rthl Pacht pro Mor-
-gen gebothen werden.
-2), solches als Wiese zu benutzen, wird
-auch kein höherer Ertrag bewirkt
-werden, wenigstens liefert die an
-dieses Grundstück stossende Söhre-Weide
-auch nur sehr schlechtes Heu, als Folge
-des zu nassen Bodens und endlich
-3), solches mit Holz anzubauen ist
-eben so wenig vortheilhaft und
-zwar weil die Entwässerung sehr
-kostspielig werden würde und außer-
-dem greift dieses Grundstück auch
-in die nebenliegenden Grund-
-stücke hinein.
-Der Schuldenzustand des Krück-
-berg gestattet, denselben auch nicht,
-das erwähnte Grundstück für einen
-so billigen Preis verkaufen zu
-dürfen, wenigstens wurde denselben
-mit dem Verkaufe desselben nur
-für eine kurze Zeit geholfen sein,
-und mehr als 50 Rthl pro Morgen
-dafür zu entrichten, kann nur
-in der Absicht sich begründen,
-den Supplicanten aus seiner
-misslichen Lage zu befreien.
-Baum d 10te Decbr 1841.
-[Creuzinger]
+NC 5702               
+
+           E[ingegangen]. in d. K. 21 Dec 1841
+Der Wiederankauf dieses Grundstückes
+für den früheren Verkaufs-Preis
+ist hiernach gewiß nicht vortheilhaft.
+Es ist aber zu erwägen, daß der Vater
+des Suppl. in guten Vermögens-Umständen
+dieses Grundstück zu dem an-
+gegebenen hohen Kaufpreise von der
+Kammer gekauft hat, und dem jetzigen
+Colon — und eine verlorene Pacht — durch
+unglückliche Umstände der
+Concurs bevorsteht (wenn ihm dadurch nicht geholfen werden).
+Allerdings hat die Kammer keine Verpflichtung,
+das Grundstück wieder zurückzunehmen; allein
+(obgleich sie es zu dem angefallenen Preise verkauft hat,)
+unter diesen Umständen scheint es mir
+doch billig, wenn die Kammer es
+etwa — nicht räthlicher — findet, dem Krückeberg
+vorerst die erbetenen 200 Rthl
+zu leihen?  Bbg 19 Dec 1841.
+
+Georg Wilhelm
 ....
+
+[verse]
+____
+
+____
