--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -46,7 +46,7 @@ für bezahlt, wieder abgenom-
 men wird, wodurch er ohne ein
 neues Anlehn nöthig zu haben,
 gleichzeitig ein schlechtes Grund-
-sütck wieder los wird, u eine
+stück wieder los wird, u eine
 so bedeutende Summe Geldes zu
 Händen bekommt, daß er sich
 von seinen meisten Schulden wird
@@ -63,11 +63,11 @@ berg wurde ich daher für den
 Kruckeberg Wiederankant
 des Landes mich entscheiden,
 welches ohnedem durch den von
-O. J. Kreuzinger vorgeschlagen
+O. f. Kreuzinger vorgeschlagen
 Abzugsgraben wahrscheinlich
-bedeutend verbessert werde.
-Bbg 23. Dec. 41.
-kann.
+bedeutend verbessert werden
+kann.  Bbg 23. Dec. 41.
+
 RC     Ricke
 die Kammer verstelle die
 weitere
