--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -36,7 +36,7 @@ zu leihen?  Bbg 19 Dec 1841.
 Georg Wilhelm
 
 P.V.
-Soll dem p Kruckeberg gründlich ge-
+Soll dem p Krückeberg gründlich ge-
 helfen werden, so müsste diess
 wohl am sichersten dadurch geschehe,
 wenn demselben das fragliche
@@ -71,8 +71,6 @@ kann.  Bbg 23. Dec. 41.
 RC     Ricke
 die Kammer verstelle die
 weitere
-
-
 ....
 
 [verse]
