--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -60,7 +60,7 @@ helfen, scheint mir indes da-
 durch nicht erreicht zu werden.
 Im Interesse des Krücke-
 berg wurde ich daher für den
-Kruckeberg Wiederankant
+Krückeberg Wiederankauf
 des Landes mich entscheiden,
 welches ohnedem durch den von
 O. f. Kreuzinger vorgeschlagen
