--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -137,7 +137,7 @@ N. C. 438i             Gesuch des Colons Krückeberg N. 10
 
     Hauck N Neuhsel, Höcker
 
-    Rl. rescrib: Das Amt habe
+    R[ent]C[ammer]. rescrib: Das Amt habe
     wie angetragen den
     Krückeberg zu bescheiden.
     B. 14. Oct. 1841
