--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -46,14 +46,14 @@ für bezahlt, wieder abgenom-
 men wird, wodurch er ohne ein
 neues Anlehn nöthig zu haben,
 gleichzeitig ein schlechtes Grund-
-stück wieder los wird, u eine
+stück wieder los wird, und eine
 so bedeutende Summe Geldes zu
 Händen bekommt, daß er sich
 von seinen meisten Schulden wird
 befreien können.
 Leichteren Kaufes würde übri-
-gens die Kammer davon kom-
-man, wenn die 200 rt darlese
+gens die Kammer davon kommen,
+wenn die 200 rt Darlehen
 bewilligt werden. Der Zweck
 dem Krückeberg gründlich zu
 helfen, scheint mir indes da-
@@ -96,7 +96,21 @@ Bückeburg, 19 Dec 1841.
 Georg Wilhelm
 
 
+per Vorstehung (by the authority of)
+If thorough assistance is to be given to Mr. Krückeberg, this
+would most likely be best achieved by taking back the disputed
+land at the price paid by the petitioner’s father to the chamber,
+whereby he would, without needing to take out a new loan,
+simultaneously rid himself of a poor property and receive such a
+significant sum of money that he would be able to free himself
+from most of his debts.  The chamber could more easily take
+action if the 200 rt loan were granted. However, the goal of
+thoroughly assisting Mr. Krückeberg, it seems to me, is not being
+achieved in this way.  In the interest of Mr. Krückeberg, I
+therefore decided to support the repurchase of the land by him,
+which can be significantly improved by the drainage trench
+suggested by O. f. Kreuzinger.
+Bückeburg, 23 Dec. 41
 
-
-
+R[ent]C[ammer]         Ricke
 ____
