--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -58,6 +58,7 @@ so bedeutende Summe Geldes zu
 Händen bekommt, daß er sich
 von seinen meisten Schulden wird
 befreien können.
+
 Leichteren Kaufes würde übri-
 gens die Kammer davon kommen,
 wenn die 200 rt Darlehen
@@ -76,8 +77,24 @@ bedeutend verbessert werden
 kann.  Bbg 23. Dec. 41.
 
 RC     Ricke
-die Kammer verstelle die
-weitere
+
+Die Kammer verstelle die
+weitere Entscheidung unter-
+thänigste zu Höchsten Ermessen
+seÿ indeß der Meinung, daß
+es rathsamer seÿn dürfte, lie-
+ber das Darlehn von 200 rp
+zu bewilligen, indem dabei
+selbst wenn es unsicher steht
+der Schaden für die Kammer-
+Kasse doch immer geringer
+seÿn werde, als wenn das
+fragliche wenig nutzbare
+Land, das Kreutzinger zu 400 r.
+tapist für mehr als 800 en
+wiedergekauft wurde.
+Bbg. 23. Decbr.
+Rick
 ....
 
 [verse]
