--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -89,10 +89,10 @@ selbst wenn es unsicher steht
 der Schaden für die Kammer-
 Kasse doch immer geringer
 seÿn werde, als wenn das
-fragliche wenig nutzbare
-Land, das Kreutzinger zu 400 r.
-tapist für mehr als 800 en
-wiedergekauft wurde.
+fragliche wenig nutzbareS <--- 's' I made it catpialized for effectr
+Land, das Kreutzinger zu 400 rt
+taxirt für mehr als 800 rtn
+wiedergekauft würde.
 Bbg. 23. Decbr.
 Rick
 ....
