--- a/modules/689/pages/nc-5702.adoc
+++ b/modules/689/pages/nc-5702.adoc
@@ -76,7 +76,7 @@ Abzugsgraben wahrscheinlich
 bedeutend verbessert werden
 kann.  Bbg 23. Dec. 41.
 
-RC     Ricke
+RC     Rick[e]
 
 Die Kammer verstelle die
 weitere Entscheidung unter-
@@ -89,12 +89,13 @@ selbst wenn es unsicher steht
 der Schaden für die Kammer-
 Kasse doch immer geringer
 seÿn werde, als wenn das
-fragliche wenig nutzbareS <--- 's' I made it catpialized for effectr
+fragliche wenig nutzbares
 Land, das Kreutzinger zu 400 rt
 taxirt für mehr als 800 rtn
-wiedergekauft würde.
+wiedergekauft wurde.
 Bbg. 23. Decbr.
-Rick
+
+Rick[e]
 ....
 
 [verse]
@@ -119,7 +120,6 @@ Bückeburg, 19 Dec 1841.
 
 Georg Wilhelm
 
-
 per Vorstehung (by the authority of)
 If thorough assistance is to be given to Mr. Krückeberg, this
 would most likely be best achieved by taking back the disputed
@@ -137,4 +137,14 @@ suggested by O. f. Kreuzinger.
 Bückeburg, 23 Dec. 41
 
 R[ent]C[ammer]         Ricke
+
+I most humbly leave any further decision to Your Highest
+discretion; however, I am of the opinion that it would be more
+advisable to approve the loan of 200 rt, since even if the
+security is uncertain, the loss to the chamber treasury would
+still be smaller than if the parcel of land in question—of little
+use and appraised by Kreutzinger at 400 rt—were bought back for
+more than 800 rt.
+Bbg., 23 Dec. 1841.
+Rick[e]
 ____
